--- a/public/wp-content/themes/aokranj/languages/sl_SI.po
+++ b/public/wp-content/themes/aokranj/languages/sl_SI.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Franz Josef theme for WordPress\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-09-16 21:37+0800\n"
-"PO-Revision-Date: 2016-03-04 23:33+0100\n"
+"PO-Revision-Date: 2016-03-06 00:05+0100\n"
 "Last-Translator: Bojan Hribernik <bojan.hribernik@gmail.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -1428,7 +1428,7 @@ msgstr ""
 
 #: inc/stacks.php:187
 msgid "Latest Articles"
-msgstr "Zadnji utrinki"
+msgstr "Utrinki"
 
 #: inc/widgets.php:10
 msgid "Franz Josef Top Bar: Top Menu"
